tests/valid/function/generic_direct_call_variable_arg.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn main(x: affine isize) -> affine isize {
  (id<affine isize> x)
}
