tests/invalid/trait/unknown_trait_bound.facet
struct Box<T> where T: Missing {
  value: affine T
}

fn main() -> unrestricted () {
  ()
}
